# snippets

./: .gitignore  README.md
c/machine/: ex0101.c  ex0102.c  ex0103.c  pow2.c
c/popl/: getword.c
c/primer/: README.md  bango  break  caps  casecvt  casemix  cgets  cmdline  continue  cparse  cpfile  cscanf  csprntf  data  delay  do  fcopy  fdomain  fire  fnarray  for  formax  fprpi  fprsc  frdata  fwrrd  global  if  ifelse  inout  lfilter  loop_rdata  malloc.ed  nestif  noside  pmmatch  prtfloat  prtint  prtstr  ptrprt  (+25 more)
c/printme/: README.md  printme.lsp  printme.sh  printme1.c  printme2.c  printme3.c
cloud/gpu/: README.md  README_pip.md  inst_desktop.sh  inst_dev_tools.sh  inst_docker_ce.sh  inst_gpu_docker.sh  move_docker_cache.sh  pip3
cpp/gtest-param/: CMakeLists.txt  README.md
cpp/gtest-param/src/: CMakeLists.txt
cpp/gtest-param/src/container/: IContainer.h  ListContainer.h  QueueContainer.h  VectorContainer.h
cpp/gtest-param/src/main/: main.cpp
cpp/gtest-param/test/: CMakeLists.txt
cpp/gtest-param/test/container/: Test.cpp  Test.cpp,1
cpp/gtest-param/test/main/: Test.cpp
cpp/gtest-sandbox/: CMakeLists.txt  README.md  build.sh
cpp/gtest-sandbox/cmake/: DownloadProject.CMakeLists.cmake.in
cpp/gtest-sandbox/include/: factorial.h  list.h  queue.h
cpp/gtest-sandbox/src/: CMakeLists.txt
cpp/gtest-sandbox/src/factorial/: factorial.cpp  main.cpp
cpp/gtest-sandbox/test/: CMakeLists.txt
cpp/gtest-sandbox/test/container/: Test.cpp
cpp/gtest-sandbox/test/factorial/: Test.cpp
docker/gitolite/: Dockerfile  b.sh  id_rsa.pub  x.sh
docker/headless-vnc/: Dockerfile  TODOs.txt  b.sh  startup.sh  x.sh
docker/java-exp/: Dockerfile  TODO.md
docker/k8sdev/: Dockerfile  b.sh  run.sh
docker/licensing/: Makefile  cleanup.sh
docker/lispdev/: Makefile  README.md  go.sh
docker/meson_ninja/: Dockerfile
docker/nginx/: Dockerfile  notes.txt
docker/nomachine/: Dockerfile  build.sh  run.sh
docker/openjdk-debian/: Dockerfile  README.md
docker/squid/: go.sh
docker/toolbox/: Makefile  go.sh
emacs/init-for-clojure/: .recentf  README.md
lisp/lil/: lil-lisper.scm  lil_lisper.el
lisp/shell/: echoargs.lsp  hello.lsp  simple.lsp
notebook/jupyter/: IPv4Addressing.ipynb
os/dusk/: buckleup.asm  buckleup.c  hello.asm  noop.asm
python/ai-eng/: task_manager.py
python/backoff/: exp_backoff_runner.py
python/first_notebook/: README.md
python/jinja2/: README.md
python/libvirt/: README.md
python/projects/: RunnerProblem.ipynb  decoder.py  url_timer.py
python/turtle/: README.md  blue_flowers.py  criss_cross.py  fern1.py  fern2.py  fractal_circle_simple.py  hex_color_spiral.py  penfun.py  right_turn.py  square_spiral.py  triangle_spiral.py
racket/htdp/: README.md  htdp_01.rkt  htdp_02.rkt  htdp_03.rkt  htdp_04.rkt
ros/hello_world/: CMakeLists.txt  package.xml
shell/: backup_gcp.sh  check_service.sh  gen_fakes.sh  mk_dicepass.sh  mk_pass.sh  mk_sparsi.sh  mk_sudoer.sh  mk_uuid.sh  set_performance_cpufreq.sh  trimr.sh
tcl/simple/: fact.tcl  fib.tcl
(+726 files in other folders)
